# ldpc_decoder

./: .gitignore  CMakeLists.txt  README.md  config.h.in
h/: bool_vec.h  channel.h  common.h  cuda_manager.h  flood.cuh  ldpc_code.h  ldpc_decoder_gpu.h  ldpc_decoder_gpu_common.h  ldpc_decoder_gpu_cuda.h  opencl_manager.h  prng_aes.h  prng_chacha.h  rng.h  test_report.h  transpose.h
src/: chacha8.cpp  chacha_stream.cpp  channel.cpp  common.cpp  ldpc_code.cpp  ldpc_decoder_gpu.cpp  ldpc_decoder_gpu.cu  main.cpp  prng_chacha.cpp  test_report.cpp  transpose.cpp
src/cuda/: cuda_manager.cpp  flood.cu
src/opencl/: flood_vec2.cl  opencl_manager.cpp
